[gd_scene load_steps=14 format=3 uid="uid://cla13vr5u1pva"]

[ext_resource type="Script" path="res://scripts/CargarDialogos/Selector_niveles.gd" id="1_gfbry"]
[ext_resource type="Texture2D" uid="uid://b67wa71b8pnnn" path="res://ui/Fondos/fondo4.png" id="2_h2fc3"]
[ext_resource type="Texture2D" uid="uid://hrkv16yw4g5d" path="res://ui/separadoresnivel/todonegro.png" id="3_8ey22"]
[ext_resource type="Texture2D" uid="uid://b05tujj2nrvre" path="res://ui/separadoresnivel/separador0.png" id="3_16vxd"]
[ext_resource type="Texture2D" uid="uid://2y27gws8gv4j" path="res://ui/genericstar.png" id="3_edi36"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ncwed"]
bg_color = Color(0, 0.72549, 0.152941, 0.623529)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bdj7f"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uhy03"]
bg_color = Color(0.0235294, 0.4, 0.415686, 0.521569)

[sub_resource type="Animation" id="Animation_jgxf8"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TextureRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("VBoxContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_cwxao"]
resource_name = "fade"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TextureRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0.156863), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("VBoxContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0.156863), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qsijw"]
_data = {
"RESET": SubResource("Animation_jgxf8"),
"fade": SubResource("Animation_cwxao")
}

[sub_resource type="Animation" id="Animation_wu72s"]
resource_name = "siguiente_nivel"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0, 0, 0, 1)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"cargar"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_okgyy"]
_data = {
"siguiente_nivel": SubResource("Animation_wu72s")
}

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gfbry")

[node name="Fondo4" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -640.0
offset_top = -360.0
offset_right = 640.0
offset_bottom = 360.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_h2fc3")
expand_mode = 1

[node name="fondo Selector" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 648.0
offset_top = 235.0
offset_right = 1231.0
offset_bottom = 605.0
texture = ExtResource("3_8ey22")
expand_mode = 1

[node name="titulo" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -72.0
offset_right = 72.0
offset_bottom = 23.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 46
text = "Guia Ludificada - Menú
"

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 648.0
offset_top = 235.0
offset_right = 1231.0
offset_bottom = 605.0
texture = ExtResource("3_16vxd")
expand_mode = 1

[node name="Objectivo" type="Label" parent="."]
layout_mode = 0
offset_left = 584.0
offset_top = 74.0
offset_right = 1279.0
offset_bottom = 256.0
theme_override_font_sizes/font_size = 24
text = "Teoría básica. En este nivel aprenderemos todos los datos concernientes a cómo la plataforma llegó a ser lo que es hoy en día.
"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="VBoxContainer" type="HBoxContainer" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 601.0
offset_top = -84.0
offset_right = 3061.0
offset_bottom = 276.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(0.18, 0.18)

[node name="1" type="TextureRect" parent="VBoxContainer"]
modulate = Color(0.360784, 0.360784, 0.360784, 1)
layout_mode = 2
size_flags_vertical = 0
tooltip_text = "Registrate"
texture = ExtResource("3_edi36")

[node name="2" type="TextureRect" parent="VBoxContainer"]
modulate = Color(0.360784, 0.360784, 0.360784, 1)
layout_mode = 2
size_flags_vertical = 0
tooltip_text = "logro bloqueado"
texture = ExtResource("3_edi36")

[node name="3" type="TextureRect" parent="VBoxContainer"]
modulate = Color(0.360784, 0.360784, 0.360784, 1)
layout_mode = 2
size_flags_vertical = 0
texture = ExtResource("3_edi36")

[node name="4" type="TextureRect" parent="VBoxContainer"]
modulate = Color(0.360784, 0.360784, 0.360784, 1)
layout_mode = 2
size_flags_vertical = 0
texture = ExtResource("3_edi36")

[node name="5" type="TextureRect" parent="VBoxContainer"]
modulate = Color(0.360784, 0.360784, 0.360784, 1)
layout_mode = 2
size_flags_vertical = 0
texture = ExtResource("3_edi36")

[node name="6" type="TextureRect" parent="VBoxContainer"]
modulate = Color(0.360784, 0.360784, 0.360784, 1)
layout_mode = 2
size_flags_vertical = 0
texture = ExtResource("3_edi36")

[node name="Control" type="Control" parent="."]
layout_mode = 1
anchors_preset = 0
offset_top = 90.0
offset_right = 40.0
offset_bottom = 130.0

[node name="0" type="CheckBox" parent="Control"]
layout_mode = 0
offset_left = 64.0
offset_top = 175.0
offset_right = 88.0
offset_bottom = 199.0
focus_mode = 0
disabled = true
icon_alignment = 1
expand_icon = true

[node name="b0" type="ProgressBar" parent="Control/0"]
layout_mode = 0
offset_left = 31.0
offset_top = -1.0
offset_right = 505.0
offset_bottom = 26.0
theme_override_styles/fill = SubResource("StyleBoxFlat_ncwed")

[node name="1" type="CheckBox" parent="Control"]
layout_mode = 0
offset_left = 64.0
offset_top = 216.0
offset_right = 88.0
offset_bottom = 240.0
focus_mode = 0
disabled = true
icon_alignment = 1
expand_icon = true

[node name="b1" type="ProgressBar" parent="Control/1"]
layout_mode = 0
offset_left = 31.0
offset_top = -1.0
offset_right = 505.0
offset_bottom = 26.0
theme_override_styles/fill = SubResource("StyleBoxFlat_ncwed")

[node name="2" type="CheckBox" parent="Control"]
layout_mode = 0
offset_left = 64.0
offset_top = 256.0
offset_right = 88.0
offset_bottom = 280.0
focus_mode = 0
disabled = true
icon_alignment = 1
expand_icon = true

[node name="b2" type="ProgressBar" parent="Control/2"]
layout_mode = 0
offset_left = 31.0
offset_top = -1.0
offset_right = 505.0
offset_bottom = 26.0
theme_override_styles/fill = SubResource("StyleBoxFlat_ncwed")

[node name="3" type="CheckBox" parent="Control"]
layout_mode = 0
offset_left = 64.0
offset_top = 296.0
offset_right = 88.0
offset_bottom = 320.0
focus_mode = 0
disabled = true
icon_alignment = 1
expand_icon = true

[node name="b3" type="ProgressBar" parent="Control/3"]
layout_mode = 0
offset_left = 31.0
offset_top = -1.0
offset_right = 505.0
offset_bottom = 26.0
theme_override_styles/fill = SubResource("StyleBoxFlat_ncwed")

[node name="4" type="CheckBox" parent="Control"]
layout_mode = 0
offset_left = 64.0
offset_top = 336.0
offset_right = 88.0
offset_bottom = 360.0
focus_mode = 0
disabled = true
icon_alignment = 1
expand_icon = true

[node name="b4" type="ProgressBar" parent="Control/4"]
layout_mode = 0
offset_left = 31.0
offset_top = -1.0
offset_right = 505.0
offset_bottom = 26.0
theme_override_styles/fill = SubResource("StyleBoxFlat_ncwed")

[node name="5" type="CheckBox" parent="Control"]
layout_mode = 0
offset_left = 64.0
offset_top = 376.0
offset_right = 88.0
offset_bottom = 400.0
focus_mode = 0
disabled = true
icon_alignment = 1
expand_icon = true

[node name="b5" type="ProgressBar" parent="Control/5"]
layout_mode = 0
offset_left = 31.0
offset_top = -1.0
offset_right = 505.0
offset_bottom = 26.0
theme_override_styles/fill = SubResource("StyleBoxFlat_ncwed")

[node name="6" type="CheckBox" parent="Control"]
layout_mode = 0
offset_left = 64.0
offset_top = 416.0
offset_right = 88.0
offset_bottom = 440.0
focus_mode = 0
disabled = true
icon_alignment = 1
expand_icon = true

[node name="b6" type="ProgressBar" parent="Control/6"]
layout_mode = 0
offset_left = 31.0
offset_top = -1.0
offset_right = 505.0
offset_bottom = 26.0
theme_override_styles/fill = SubResource("StyleBoxFlat_ncwed")

[node name="botones" type="Control" parent="."]
layout_mode = 1
anchors_preset = 0
offset_top = 90.0
offset_right = 40.0
offset_bottom = 130.0

[node name="c0" type="Button" parent="botones"]
layout_mode = 0
offset_left = 96.0
offset_top = 172.0
offset_right = 568.0
offset_bottom = 202.0
focus_mode = 0
theme_override_styles/normal = SubResource("StyleBoxFlat_bdj7f")
theme_override_styles/hover = SubResource("StyleBoxFlat_uhy03")

[node name="c1" type="Button" parent="botones"]
layout_mode = 0
offset_left = 95.0
offset_top = 213.0
offset_right = 567.0
offset_bottom = 243.0
focus_mode = 0
theme_override_styles/normal = SubResource("StyleBoxFlat_bdj7f")
theme_override_styles/hover = SubResource("StyleBoxFlat_uhy03")

[node name="c2" type="Button" parent="botones"]
layout_mode = 0
offset_left = 96.0
offset_top = 251.0
offset_right = 568.0
offset_bottom = 281.0
focus_mode = 0
theme_override_styles/normal = SubResource("StyleBoxFlat_bdj7f")
theme_override_styles/hover = SubResource("StyleBoxFlat_uhy03")

[node name="c3" type="Button" parent="botones"]
layout_mode = 0
offset_left = 94.0
offset_top = 294.0
offset_right = 566.0
offset_bottom = 324.0
focus_mode = 0
theme_override_styles/normal = SubResource("StyleBoxFlat_bdj7f")
theme_override_styles/hover = SubResource("StyleBoxFlat_uhy03")

[node name="c4" type="Button" parent="botones"]
layout_mode = 0
offset_left = 95.0
offset_top = 335.0
offset_right = 567.0
offset_bottom = 365.0
focus_mode = 0
theme_override_styles/normal = SubResource("StyleBoxFlat_bdj7f")
theme_override_styles/hover = SubResource("StyleBoxFlat_uhy03")

[node name="c5" type="Button" parent="botones"]
layout_mode = 0
offset_left = 97.0
offset_top = 374.0
offset_right = 569.0
offset_bottom = 404.0
focus_mode = 0
theme_override_styles/normal = SubResource("StyleBoxFlat_bdj7f")
theme_override_styles/hover = SubResource("StyleBoxFlat_uhy03")

[node name="c6" type="Button" parent="botones"]
layout_mode = 0
offset_left = 97.0
offset_top = 414.0
offset_right = 569.0
offset_bottom = 444.0
focus_mode = 0
theme_override_styles/normal = SubResource("StyleBoxFlat_bdj7f")
theme_override_styles/hover = SubResource("StyleBoxFlat_uhy03")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_qsijw")
}

[node name="Logros" type="Label" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -629.0
offset_top = -110.0
offset_right = -505.0
offset_bottom = -87.0
grow_horizontal = 0
grow_vertical = 0
text = "Logros del Nivel: "

[node name="CambiarNivel" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_okgyy")
}

[connection signal="mouse_entered" from="botones/c0" to="." method="_on_c_0_mouse_entered"]
[connection signal="pressed" from="botones/c0" to="." method="_on_c_0_pressed"]
[connection signal="mouse_entered" from="botones/c1" to="." method="_on_c_1_mouse_entered"]
[connection signal="pressed" from="botones/c1" to="." method="_on_c_1_pressed"]
[connection signal="mouse_entered" from="botones/c2" to="." method="_on_c_2_mouse_entered"]
[connection signal="pressed" from="botones/c2" to="." method="_on_c_2_pressed"]
[connection signal="mouse_entered" from="botones/c3" to="." method="_on_c_3_mouse_entered"]
[connection signal="pressed" from="botones/c3" to="." method="_on_c_3_pressed"]
[connection signal="mouse_entered" from="botones/c4" to="." method="_on_c_4_mouse_entered"]
[connection signal="pressed" from="botones/c4" to="." method="_on_c_4_pressed"]
[connection signal="mouse_entered" from="botones/c5" to="." method="_on_c_5_mouse_entered"]
[connection signal="pressed" from="botones/c5" to="." method="_on_c_5_pressed"]
[connection signal="mouse_entered" from="botones/c6" to="." method="_on_c_6_mouse_entered"]
[connection signal="pressed" from="botones/c6" to="." method="_on_c_6_pressed"]
